--- a/src/components/IPsMap/IPsMap.css
+++ b/src/components/IPsMap/IPsMap.css
@@ -1,11 +1,13 @@
 .leaflet-container {
-    height: 400px;
-    width: 800px;
+    height: 500px;
+    width: 1000px;
+    border-radius: 30px;
 }
 
 .IPsMap {
     display: flex;
     flex-direction: column;
     padding: 16px;
+    justify-content: center;
+    align-items: center;
 }
-
